Update: @Deprecated URL based methods in Companion interface